--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700" rel="stylesheet">
     <title>Exodus: Manage Blockchain Assets</title>
+
+    <script defer src="https://use.fontawesome.com/releases/v5.0.7/js/all.js"></script>
   </head>
   <body>
     <div id="app"></div>
